--- a/TSBB11/TSBB11.vcxproj
+++ b/TSBB11/TSBB11.vcxproj
@@ -152,7 +152,6 @@
     <ClCompile Include="src\common\GL_utilities.c" />
     <ClCompile Include="src\common\loadobj.c" />
     <ClCompile Include="src\common\LoadTGA.c" />
-    <ClCompile Include="src\common\Utilities.cpp" />
     <ClCompile Include="src\common\Windows\glew.c" />
     <ClCompile Include="src\common\xml\pugixml.cpp" />
     <ClCompile Include="src\flowSource.cpp" />
@@ -162,6 +161,7 @@
     <ClCompile Include="src\readData.cpp" />
     <ClCompile Include="src\sdlTexture.cpp" />
     <ClCompile Include="src\shallowGPU.cpp" />
+    <ClCompile Include="src\Utilities.cpp" />
     <ClCompile Include="src\voxel.cpp" />
     <ClCompile Include="src\voxelTesting.cpp" />
     <ClCompile Include="src\xmlParsing.cpp" />
@@ -173,7 +173,6 @@
     <ClInclude Include="src\common\loadobj.h" />
     <ClInclude Include="src\common\LoadTGA.h" />
     <ClInclude Include="src\common\SDL_image.h" />
-    <ClInclude Include="src\common\Utilities.h" />
     <ClInclude Include="src\common\Windows\glew.h" />
     <ClInclude Include="src\common\Windows\sdl2\SDL.h" />
     <ClInclude Include="src\common\Windows\wglew.h" />
@@ -186,6 +185,7 @@
     <ClInclude Include="src\readData.h" />
     <ClInclude Include="src\sdlTexture.h" />
     <ClInclude Include="src\shallowGPU.h" />
+    <ClInclude Include="src\Utilities.h" />
     <ClInclude Include="src\voxel.h" />
     <ClInclude Include="src\voxelTesting.h" />
     <ClInclude Include="src\xmlParsing.h" />
