--- a/TSBB11/TSBB11.vcxproj.filters
+++ b/TSBB11/TSBB11.vcxproj.filters
@@ -66,9 +66,6 @@
     <ClCompile Include="src\heightField.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\common\Utilities.cpp">
-      <Filter>Source Files\Common</Filter>
-    </ClCompile>
     <ClCompile Include="src\xmlParsing.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -82,6 +79,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\shallowGPU.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Utilities.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -109,9 +109,6 @@
     </ClInclude>
     <ClInclude Include="src\readData.h">
       <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\common\Utilities.h">
-      <Filter>Header Files\Common</Filter>
     </ClInclude>
     <ClInclude Include="src\voxel.h">
       <Filter>Header Files</Filter>
@@ -150,6 +147,9 @@
       <Filter>Source Files\Common</Filter>
     </ClInclude>
     <ClInclude Include="src\shallowGPU.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Utilities.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
