Missed to update travis also put a link to the webpage in the readme

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ before_script:
   - git checkout gh-pages
   -
   - # Go to directory for make
-  - cd ../TSBB11/
+  - cd ../code/
 
 script: make docs
 
