--- a/TSBB11/TSBB11.vcxproj
+++ b/TSBB11/TSBB11.vcxproj
@@ -294,10 +294,10 @@
     <ClCompile Include="src\common\LoadTGA.c" />
     <ClCompile Include="src\common\Utilities.cpp" />
     <ClCompile Include="src\common\Windows\glew.c" />
+    <ClCompile Include="src\heightFieldCPU.cpp" />
     <ClCompile Include="src\myDrawable.cpp" />
     <ClCompile Include="src\program.cpp" />
     <ClCompile Include="src\readData.cpp" />
-    <ClCompile Include="src\ShallowNewton.cpp" />
     <ClCompile Include="src\shallowWater.cpp" />
     <ClCompile Include="src\ShallowWater2.cpp" />
     <ClCompile Include="src\shallowWater3.cpp" />
@@ -312,10 +312,10 @@
     <ClInclude Include="src\common\Windows\glew.h" />
     <ClInclude Include="src\common\Windows\sdl2\SDL.h" />
     <ClInclude Include="src\common\Windows\wglew.h" />
+    <ClInclude Include="src\heightFieldCPU.h" />
     <ClInclude Include="src\myDrawable.h" />
     <ClInclude Include="src\program.h" />
     <ClInclude Include="src\readData.h" />
-    <ClInclude Include="src\ShallowNewton.h" />
     <ClInclude Include="src\shallowWater.h" />
     <ClInclude Include="src\ShallowWater2.h" />
     <ClInclude Include="src\shallowWater3.h" />
