Rendamed shallowWater2 files and class to ShallowWaterCPU

--- a/TSBB11/TSBB11.vcxproj
+++ b/TSBB11/TSBB11.vcxproj
@@ -299,8 +299,8 @@
     <ClCompile Include="src\program.cpp" />
     <ClCompile Include="src\readData.cpp" />
     <ClCompile Include="src\shallowWater.cpp" />
-    <ClCompile Include="src\ShallowWater2.cpp" />
     <ClCompile Include="src\shallowWater3.cpp" />
+    <ClCompile Include="src\shallowWaterCPU.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\camera.h" />
@@ -317,8 +317,8 @@
     <ClInclude Include="src\program.h" />
     <ClInclude Include="src\readData.h" />
     <ClInclude Include="src\shallowWater.h" />
-    <ClInclude Include="src\ShallowWater2.h" />
     <ClInclude Include="src\shallowWater3.h" />
+    <ClInclude Include="src\shallowWaterCPU.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="makefile" />
